Middle section overflow fixed

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -824,7 +824,7 @@ main section {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  height: calc(100vh - 5em);
+  min-height: calc(100vh - 5em);
   background-color: rgba(15, 15, 15, 0.4);
 }
 
