--- a/src/sass/partials/_index.scss
+++ b/src/sass/partials/_index.scss
@@ -12,7 +12,7 @@ main {
     flex: 2.75;
     display: flex;
     flex-direction: column;
-    height: calc(100vh - 5em);
+    min-height: calc(100vh - 5em);
     background-color: rgba($bg, .4);
     .top,
     .bottom {
